# hassembler

./: .gitignore  CMakeLists.txt  Makefile  README.md  explicação.md  gen-call-graph.sh  ligador  map  map.cpp  montador
.github/workflows/: build-debug.yml
asm_files/: Q2.asm  area_triangulo.asm  area_triangulo_com_erros.asm  bin1.asm  bin3.asm  const_com_operandos_errados.asm  fat_mod_A.asm  fat_mod_B.asm  fatorial-com-erros.asm  fatorial.asm  fatorial.obj.txt  fatorial_label_sozinha.asm  fibonacci.asm  fibonacci.obj.txt  fibonacci_label_sozinha.asm  five-fibonacci.asm  is_divisible_by_3.asm  is_divisible_by_3_macro.asm  main.asm  mod_a.asm  mod_b.asm  mul_div.asm  sb-bin-2.asm  sb-bin.asm  sb-bin1.asm  sb-bin2.asm  sb-bin3.asm  single_file_with_module.asm  soma_de_dois_numeros.asm  soma_de_dois_numeros.obj.txt  soma_sub.asm  sub_um.asm  varios_erros_por_linha.asm  vazio.asm
docs/: README.md  aleatorios.md  como-usar.md  curiosidades.md  diretivas.md  simulador.md  vscode-automation.md
include/: assembler.h  errors.h  parseline.h  simulador.h  simulator.h  util.h
lib/doctest/: CMakeLists.txt
src/: assembler.cpp  errors.cpp  main.cpp  montador.cpp  parseline.cpp  util.cpp
src/assembler/: CMakeLists.txt  assembler.cpp  assembler.h  assemblerdata.cpp  assemblerdata.h  assemblydata.cpp  assemblydata.h  assemblyerror.h  line.cpp  line.h  oldassembler.cpp  oldassembler.h  source.cpp  source.h  util.cpp  util.h
src/assembler/_tests/: adjustfordatasection.test.cpp  adjustfordatasection.ut.cpp  adjustobjectcode.ut.cpp  assemblerdata.ut.cpp  findinvector.ut.cpp  findnexttokenstartingfrom.test.cpp  findnexttokenstartingfrom.ut.cpp  line.ut.cpp  parseline.ut.cpp  runfirstpass.ut.cpp  runsecondpass.test.cpp  runsecondpass.ut.cpp  runzerothpass.test.cpp  runzerothpass.ut.cpp  settokens.test.cpp  settokens.ut.cpp  stringvectorlowercased.ut.cpp  testingsections.test.cpp  tolower.ut.cpp
src/assembler/scanner/_tests/: findnexttokenstartingfrom.ut.cpp  isvalidsymbol.ut.cpp  parsetokens.ut.cpp
src/assembler/twopasses/: twopassesassembler.h  zerothpass.cpp  zerothpass.h  zerothpass2.cpp  zerothpass2.h
src/assembler/twopasses/_tests/: zerothpass.ut.cpp  zerothpass2.ut.cpp
src/hasm/: commandlineparser.cpp  commandlineparser.h  hasm.cpp  hasm.h  hasmdata.cpp  hasmdata.h  hasmerror.h  hasmexception.h  hasmparameterexception.h  hasmparameters.h  hasmparametersparser.cpp  hasmparametersparser.h  line.cpp  line.h  source.cpp  source.h  sourcecontent.cpp  sourcecontent.h
src/hasm/_tests/: commandlineparser.ut.cpp  hasmdata.ut.cpp  hasmparametersparser.ut.cpp  line.ut.cpp  source.ut.cpp  sourcecontent.ut.cpp
src/hasm/assembler/: assembler.h  assemblydata.cpp  assemblydata.h  assemblyerror.h  line.cpp  line.h  source.cpp  source.h
src/hasm/assembler/_tests/: adjustfordatasection.ut.cpp  adjustobjectcode.ut.cpp  assemblerdata.ut.cpp  findinvector.ut.cpp  line.ut.cpp  runfirstpass.ut.cpp  runsecondpass.ut.cpp  runzerothpass.ut.cpp  settokens.ut.cpp  source.ut.cpp  stringvectorlowercased.ut.cpp  testingsections.ut.cpp  tolower.ut.cpp
src/hasm/assembler/directives/: directive.h
src/hasm/assembler/instructions/: addinstruction.h  allinstructions.h  copyinstruction.h  divinstruction.h  inputinstruction.h  instruction.h  instructionscontainer.cpp  instructionscontainer.h  jmpinstruction.h  jmpninstruction.h  jmppinstruction.h  jmpzinstruction.h  loadinstruction.h  mulinstruction.h  outputinstruction.h  stopinstruction.h  storeinstruction.h  subinstruction.h
src/hasm/assembler/instructions/_tests/: instruction.ut.cpp  (+1 more)
src/hasm/assembler/parser/: parser.cpp  parser.h
src/hasm/assembler/scanner/: scanner.cpp  scanner.h
src/hasm/assembler/twopasses/: firstpass.cpp  firstpass.h  passinterface.h  twopassesassembler.cpp  twopassesassembler.h  zerothpass.cpp  zerothpass.h  zerothpass2.cpp  zerothpass2.h
src/hasm/input/: input.cpp
src/hasm/linker/_tests/: alignobjectcodes.ut.cpp  linker.ut.cpp
src/hasm/util/: correctionfactortable.cpp  correctionfactortable.hpp  definitionstable.cpp  symbolstable.cpp  symbolstable.h  usagetable.cpp  usagetable.h
src/hasm/util/_tests/: correctionfactortable.ut.cpp  definitionstable.ut.cpp  findinvector.ut.cpp  stringvectorlowercased.ut.cpp  symbolstable.ut.cpp  tolower.ut.cpp  usagetable.ut.cpp
src/input/: input.h
src/ligador/: correctionfactortable.cpp  correctionfactortable.hpp  definitionstable.cpp  definitionstable.hpp  ligador.cpp  linker.cpp  linker.hpp  usagetable.cpp  usagetable.hpp  utilforlinker.h
src/linker/: CMakeLists.txt  correctionfactortable.hpp  definitionstable.hpp  ligador.cpp  linker.cpp  linker.hpp  linkerdata.hpp  utilforlinker.cpp  utilforlinker.h
src/linker/_tests/: alignobjectcodes.test.cpp  correctionfactortable.ut.cpp  definitionstable.ut.cpp  usagetable.ut.cpp
src/montador/: assembler.cpp  assembler.h  montador.cpp  util.cpp
src/simulador/: simulador.cpp  simulator.cpp
src/util/: assemblyoptions.h  commandlineparser.cpp  commandlineparser.h  definitionstable.cpp  definitionstable.hpp
src/util/_tests/: commandlineparser.ut.cpp  correctionfactortable.ut.cpp  header.h  stringfication.ut.cpp  usagetable.ut.cpp
tests/: README.md  parseLine.test.cpp
tests/assembler/: adjustfordatasection.test.cpp  adjustobjectcode.test.cpp  findinvector.test.cpp  findlabel.test.cpp  findnextsymbolstartingfrom.test.cpp  findnexttokenstartingfrom.test.cpp  parseline.test.cpp  runfirstpass.test.cpp  runsecondpass.test.cpp  runzerothpass.test.cpp  settokens.test.cpp  stringvectorlowercased.test.cpp  testingsections.test.cpp  tolower.test.cpp
tests/linker/: alignobjectcodes.test.cpp  correctionfactortable.test.cpp  definitionstable.test.cpp  linker.test.cpp  usagetable.test.cpp
tests/parseline/: findlabel.test.cpp  parseline.test.cpp
tests/simulator/: some.test.cpp
(+9 files in other folders)
